--- a/packages/api_client/pubspec.yaml
+++ b/packages/api_client/pubspec.yaml
@@ -7,9 +7,13 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   mocktail: ^0.3.0
   test: ^1.19.2
   very_good_analysis: ^5.0.0
+
 dependencies:
   equatable: ^2.0.5
   http: ^1.1.0
+  json_annotation: ^4.8.1
