--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   go_router: ^10.0.0
   intl: ^0.18.0
   provider: ^6.0.5
+  rxdart: ^0.27.7
   scryfall_repository:
     path: packages/scryfall_repository
   user_repository:
