--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: ^10.6.0
   form_inputs:
     path: packages/form_inputs
   go_router: ^10.0.0
