--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,14 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: ^10.6.0
   form_inputs:
     path: packages/form_inputs
   go_router: ^10.0.0
   intl: ^0.18.0
   provider: ^6.0.5
+  rxdart: ^0.27.7
+
   scryfall_repository:
     path: packages/scryfall_repository
   user_repository:
