--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   app_ui:
     path: packages/app_ui
   bloc: ^8.1.2
+  circular_menu: ^2.0.1
   equatable: ^2.0.5
   firebase_analytics: ^10.4.4
   firebase_authentication_client:
